// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (no-trailing-whitespace) /src/tslint/no-trailing-whitespace/test.ts[1, 19]: trailing whitespace

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
console.log('->');     

======
console.log(\\"->\\");

>>>>>> after
"
`;
